--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
@@ -15,6 +15,7 @@
     "humps": "^2.0.1",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "mysql2": "^3.9.8"
+    "mysql2": "^3.9.8",
+    "socket.io": "^4.7.5"
   }
 }
