--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
-   REACT_APP_API_HOST=https://localhost
-   REACT_APP_API_PORT=3100
+NODE_ENV=development
+REACT_APP_API_HOST=http://localhost
+REACT_APP_API_PORT=3100
